--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +28,10 @@
     "sequelize": "^6.20.1",
     "sequelize-cli": "^6.4.1",
     "session-file-store": "^1.5.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "sessions/*"
+    ]
   }
 }
